<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CalculateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/to_provide_back_press_functionality" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/instagramsans_regular"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/c_from_bar"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/c_lb_from"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/c_sp_from"
                android:paddingStart="25dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/spinner_background"
                android:textAlignment="center" />
        </LinearLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/c_from_editText_layout"
            android:layout_below="@id/c_from_bar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/c_from_editText"
                android:layout_width="match_parent"
                android:hint="@string/enter_value"
                android:textSize="20sp"
                android:inputType="numberDecimal"
                android:textAlignment="viewEnd"
                android:layout_height="match_parent"

                />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/c_to_bar"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/c_lb_to"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/c_sp_to"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="25dp"
                android:background="@drawable/spinner_background"
                android:textAlignment="center" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/c_to_editText_layout"
            android:layout_below="@id/c_to_bar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/c_to_editText"
                android:editable="false"
                android:layout_width="match_parent"
                android:hint="@string/converted_value"
                android:textAlignment="viewEnd"
                android:textSize="24sp"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

</LinearLayout>