<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textAlignment="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/instagramsans_regular"
                android:text="@string/home"
                android:textColor="@color/white"

                android:textSize="24sp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/lb_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topbar"
            android:fontFamily="@font/instagramsans_regular"
            android:padding="10dp"
            android:text="@string/common"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recv_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/lb_common"
            tools:listitem="@layout/my_category_card" />

        <TextView
            android:id="@+id/lb_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recv_common"
            android:fontFamily="@font/instagramsans_regular"
            android:padding="10dp"
            android:text="@string/it"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recv_it"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/lb_it"
            tools:listitem="@layout/my_category_card" />

    </RelativeLayout>
</ScrollView>